tests/ui/async-await/in-trait/fn-not-async-err.stderr
error: method should be `async` or return a future, but it is synchronous
  --> $DIR/fn-not-async-err.rs:8:5
   |
LL |     fn foo(&self) -> i32 {
   |     ^^^^^^^^^^^^^^^^^^^^
   |
note: this method is `async` so it expects a future to be returned
  --> $DIR/fn-not-async-err.rs:4:5
   |
LL |     async fn foo(&self) -> i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

